Fixed: background color didn't take all the height on Firefox

--- a/client/app/views/styles/application.styl
+++ b/client/app/views/styles/application.styl
@@ -11,3 +11,4 @@
 #content
 #files
     height 100%
+    overflow auto
